Fix: graph was too wide on narrow screens.

--- a/admin.css
+++ b/admin.css
@@ -54,14 +54,18 @@ button.unsub {
   text-shadow: 1px 1px 1px #9E3F3F;
 }
 #cumulative-srfis {
-  border: 1px solid black;
+  border: 1px solid lightgrey;
   float: right;
+  margin: 1em 0 1em 1em;
+  max-width: calc(100% - 2em);
   padding: 1em;
   transition: width 0.25s ease-in 0.5s;
-  width: 50%;
+  width: 40%;
 }
 #cumulative-srfis:hover {
-  width: 90%;
+  margin-left: 0;
+  transition: all 0.25s ease-in 0.5s;
+  width: 100%;
 }
 #cumulative-srfis img {
   width: 100%;
